test/success/deref/ref/main.sk
module Main {

class Ptr {
}

instance Deref[Ptr] {
    type Target = Foo
    fn get(&self) -> Foo {
        Foo(Bar())
    }
    
    fn set(&self, value: Foo) {
    }

    fn release(&self) {
    }
}

class Bar {
}

class Foo {
    field : Bar
}

instance Clone[Bar] {
    fn clone(&self) -> Bar {
        Bar()
    }
}

instance Copy[Bar]

fn bar (b: Bar) {

}


fn main() {
    let mut p = Ptr();
    let r = &p;
    bar(r.field);
}

}