test/errors/deref/not_copy/main.sk
module Main {

class Ptr {
}

instance Deref[Ptr] {
    type Target = Foo
    
    fn get(&self) -> Foo {
        Foo(Bar())
    }
    
    fn set(&self, value: Foo) {
    }

    fn release(&self) {
    }
}

class Bar {
}

class Foo {
    field : Bar
}

fn bar (b: Bar) {

}

fn main() {
    let mut p = Ptr();
    bar(p.field);
}

}